# langchain-academy-task

./: .gitignore
module-1/activity/poetry/agent/: pyproject.toml
module-1/activity/poetry/agent-memory/: pyproject.toml
module-1/activity/poetry/agent-memory/src/app/: app.py
module-1/activity/poetry/agent/src/app/: app.py
module-1/activity/poetry/chain/: pyproject.toml
module-1/activity/poetry/chain/src/app/: app.py
module-1/activity/poetry/route/: pyproject.toml
module-1/activity/poetry/route/src/app/: app.py
module-2/activity/poetry/chatbot-ext-memory/: pyproject.toml
module-2/activity/poetry/chatbot-ext-memory/src/app/: chatbot.py
module-2/activity/poetry/chatbot-ext-memory/state_db/: example.db
module-2/activity/poetry/chatbot-summarization/: pyproject.toml
module-2/activity/poetry/chatbot-summarization/src/app/: chatbot.py
module-2/activity/poetry/filtering-trimming/: pyproject.toml
module-2/activity/poetry/filtering-trimming/src/app/: filtering_messages.py  messages_state.py  reducers.py  trim_message.py
module-2/activity/poetry/multiple-schema/src/app/: input_output.py  private_state.py
module-2/activity/poetry/state-reducers/: pyproject.toml
module-2/activity/poetry/state-reducers/src/app/: branching.py  custom_reducers.py  messages.py  overwriting_state.py  reducers.py
module-2/activity/poetry/state-schema/: pyproject.toml
module-2/activity/poetry/state-schema/src/app/: app.py  typed_dataclass.py  typed_pydantic.py
module-4/activity/poetry/parallel/: pyproject.toml
module-4/activity/poetry/parallel/src/app/: fanout_fanin.py  parallel.py  parallel_llm.py  parallel_reducer.py  parallel_sorting.py  parallel_studio.py  parallel_waiting.py
module-4/studio/: requirements.txt
